// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`filterCompletedReviewRequestPRList > filters pull requests that have been completed review request by the specified user 1`] = `
[
  {
    "assignees": [],
    "author": "sai6855",
    "commenters": [
      "mui-bot",
      "sai6855",
    ],
    "comments": [
      {
        "author": {
          "login": "mui-bot",
        },
        "createdAt": "2024-09-12T17:00:17Z",
      },
      {
        "author": {
          "login": "sai6855",
        },
        "createdAt": "2024-09-13T04:26:18Z",
      },
    ],
    "createdAt": "2024-09-13 01:57:59",
    "isDraft": false,
    "labels": [
      "component: CircularProgress",
      "docs",
      "package: material-ui",
    ],
    "mergeable": "UNKNOWN",
    "merged": true,
    "mergedAt": "2024-09-13 15:18:17",
    "number": 43734,
    "requestedReviewers": null,
    "reviewDecision": "APPROVED",
    "reviewRequestRecipientSet": [
      "ZeeshanTamboli",
    ],
    "reviewers": [
      "ZeeshanTamboli",
    ],
    "reviews": [
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "submittedAt": "2024-09-12T18:42:08Z",
      },
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "submittedAt": "2024-09-13T04:42:29Z",
      },
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "submittedAt": "2024-09-13T06:18:10Z",
      },
    ],
    "state": "MERGED",
    "targetBranch": "master",
    "timelineItems": [
      {
        "createdAt": "2024-09-12T17:10:55Z",
        "requestedReviewer": {
          "login": "ZeeshanTamboli",
        },
      },
    ],
    "title": "[docs][material-ui][CircularProgress] Add Circular size demo",
    "url": "https://github.com/mui/material-ui/pull/43734",
    "user": "sai6855",
  },
]
`;

exports[`filterPRListByAuthor > filters pull requests that are authored by the specified user 1`] = `
[
  {
    "assignees": [],
    "author": "oliviertassinari",
    "commenters": [
      "mui-bot",
    ],
    "comments": [
      {
        "author": {
          "login": "mui-bot",
        },
        "createdAt": "2025-05-01T00:31:17Z",
      },
    ],
    "createdAt": "2025-05-01 09:27:00",
    "isDraft": false,
    "labels": [
      "MUI X",
      "core",
      "regression 🐛",
    ],
    "mergeable": "UNKNOWN",
    "merged": true,
    "mergedAt": "2025-05-06 08:41:19",
    "number": 46051,
    "requestedReviewers": null,
    "reviewDecision": "APPROVED",
    "reviewRequestRecipientSet": null,
    "reviewers": [
      "Janpot",
      "jedwards1211",
      "oliviertassinari",
    ],
    "reviews": [
      {
        "author": {
          "login": "Janpot",
        },
        "submittedAt": "2025-05-01T08:38:47Z",
      },
      {
        "author": {
          "login": "Janpot",
        },
        "submittedAt": "2025-05-01T08:45:02Z",
      },
      {
        "author": {
          "login": "oliviertassinari",
        },
        "submittedAt": "2025-05-05T23:06:42Z",
      },
      {
        "author": {
          "login": "jedwards1211",
        },
        "submittedAt": "2025-05-06T01:07:34Z",
      },
      {
        "author": {
          "login": "oliviertassinari",
        },
        "submittedAt": "2025-05-06T17:07:38Z",
      },
      {
        "author": {
          "login": "jedwards1211",
        },
        "submittedAt": "2025-05-06T17:43:08Z",
      },
      {
        "author": {
          "login": "oliviertassinari",
        },
        "submittedAt": "2025-05-06T18:51:27Z",
      },
    ],
    "state": "MERGED",
    "targetBranch": "master",
    "timelineItems": [],
    "title": "[core] Fix internal version duplication",
    "url": "https://github.com/mui/material-ui/pull/46051",
    "user": "oliviertassinari",
  },
  {
    "assignees": [],
    "author": "oliviertassinari",
    "commenters": [
      "mui-bot",
    ],
    "comments": [
      {
        "author": {
          "login": "mui-bot",
        },
        "createdAt": "2025-05-02T13:33:29Z",
      },
    ],
    "createdAt": "2025-05-02 22:29:40",
    "isDraft": false,
    "labels": [
      "regression 🐛",
      "website",
    ],
    "mergeable": "UNKNOWN",
    "merged": true,
    "mergedAt": "2025-05-07 00:03:19",
    "number": 46061,
    "requestedReviewers": null,
    "reviewDecision": "APPROVED",
    "reviewRequestRecipientSet": [
      "nadjakovacev",
    ],
    "reviewers": [
      "nadjakovacev",
    ],
    "reviews": [
      {
        "author": {
          "login": "nadjakovacev",
        },
        "submittedAt": "2025-05-06T12:08:29Z",
      },
    ],
    "state": "MERGED",
    "targetBranch": "master",
    "timelineItems": [
      {
        "createdAt": "2025-05-02T22:58:49Z",
        "requestedReviewer": {
          "login": "nadjakovacev",
        },
      },
    ],
    "title": "[website] Update values",
    "url": "https://github.com/mui/material-ui/pull/46061",
    "user": "oliviertassinari",
  },
  {
    "assignees": [],
    "author": "oliviertassinari",
    "commenters": [
      "mui-bot",
    ],
    "comments": [
      {
        "author": {
          "login": "mui-bot",
        },
        "createdAt": "2025-05-03T14:08:16Z",
      },
    ],
    "createdAt": "2025-05-03 23:05:12",
    "isDraft": false,
    "labels": [
      "enhancement",
      "scope: docs-infra",
    ],
    "mergeable": "UNKNOWN",
    "merged": true,
    "mergedAt": "2025-05-06 02:27:16",
    "number": 46064,
    "requestedReviewers": null,
    "reviewDecision": "APPROVED",
    "reviewRequestRecipientSet": [
      "alexfauquette",
    ],
    "reviewers": [
      "alexfauquette",
      "oliviertassinari",
    ],
    "reviews": [
      {
        "author": {
          "login": "oliviertassinari",
        },
        "submittedAt": "2025-05-03T14:46:59Z",
      },
      {
        "author": {
          "login": "oliviertassinari",
        },
        "submittedAt": "2025-05-03T14:50:16Z",
      },
      {
        "author": {
          "login": "oliviertassinari",
        },
        "submittedAt": "2025-05-03T14:51:48Z",
      },
      {
        "author": {
          "login": "alexfauquette",
        },
        "submittedAt": "2025-05-05T08:31:53Z",
      },
    ],
    "state": "MERGED",
    "targetBranch": "master",
    "timelineItems": [
      {
        "createdAt": "2025-05-04T11:15:28Z",
        "requestedReviewer": {
          "login": "alexfauquette",
        },
      },
    ],
    "title": "[docs-infra] Update feedback Node.js to v22",
    "url": "https://github.com/mui/material-ui/pull/46064",
    "user": "oliviertassinari",
  },
]
`;

exports[`filterPRListByCommenter > filters pull requests that have ever been commented by the specified user 1`] = `
[
  {
    "assignees": [],
    "author": "sai6855",
    "commenters": [
      "ZeeshanTamboli",
      "mui-bot",
      "sai6855",
    ],
    "comments": [
      {
        "author": {
          "login": "mui-bot",
        },
        "createdAt": "2025-05-02T07:43:13Z",
      },
      {
        "author": {
          "login": "sai6855",
        },
        "createdAt": "2025-05-16T13:33:47Z",
      },
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "createdAt": "2025-05-16T14:00:45Z",
      },
      {
        "author": {
          "login": "sai6855",
        },
        "createdAt": "2025-05-17T04:55:18Z",
      },
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "createdAt": "2025-05-17T09:41:12Z",
      },
      {
        "author": {
          "login": "sai6855",
        },
        "createdAt": "2025-05-20T10:51:46Z",
      },
      {
        "author": {
          "login": "sai6855",
        },
        "createdAt": "2025-05-21T09:06:37Z",
      },
      {
        "author": {
          "login": "sai6855",
        },
        "createdAt": "2025-05-21T12:32:36Z",
      },
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "createdAt": "2025-05-21T13:07:29Z",
      },
      {
        "author": {
          "login": "sai6855",
        },
        "createdAt": "2025-05-21T17:57:30Z",
      },
    ],
    "createdAt": "2025-05-02 16:40:34",
    "isDraft": false,
    "labels": [
      "component: toggle button",
      "docs",
    ],
    "mergeable": "UNKNOWN",
    "merged": true,
    "mergedAt": "2025-05-22 17:47:43",
    "number": 46058,
    "requestedReviewers": [
      "siriwatknp",
    ],
    "reviewDecision": "APPROVED",
    "reviewRequestRecipientSet": [
      "ZeeshanTamboli",
      "siriwatknp",
    ],
    "reviewers": [
      "ZeeshanTamboli",
      "sai6855",
    ],
    "reviews": [
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "submittedAt": "2025-05-16T12:53:45Z",
      },
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "submittedAt": "2025-05-20T14:04:15Z",
      },
      {
        "author": {
          "login": "sai6855",
        },
        "submittedAt": "2025-05-20T15:30:01Z",
      },
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "submittedAt": "2025-05-21T08:18:44Z",
      },
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "submittedAt": "2025-05-22T08:29:54Z",
      },
    ],
    "state": "MERGED",
    "targetBranch": "master",
    "timelineItems": [
      {
        "createdAt": "2025-05-02T12:04:01Z",
        "requestedReviewer": {
          "login": "siriwatknp",
        },
      },
      {
        "createdAt": "2025-05-15T17:34:50Z",
        "requestedReviewer": {
          "login": "ZeeshanTamboli",
        },
      },
    ],
    "title": "[docs][ToggleButtonGroup] Add spacing demo",
    "url": "https://github.com/mui/material-ui/pull/46058",
    "user": "sai6855",
  },
]
`;

exports[`filterPRListByLabel > filters pull requests that exactly match provided label names (case-sensitive) 1`] = `
[
  {
    "assignees": [],
    "author": "oliviertassinari",
    "commenters": [
      "mui-bot",
    ],
    "comments": [
      {
        "author": {
          "login": "mui-bot",
        },
        "createdAt": "2025-05-03T14:08:16Z",
      },
    ],
    "createdAt": "2025-05-03 23:05:12",
    "isDraft": false,
    "labels": [
      "enhancement",
      "scope: docs-infra",
    ],
    "mergeable": "UNKNOWN",
    "merged": true,
    "mergedAt": "2025-05-06 02:27:16",
    "number": 46064,
    "requestedReviewers": null,
    "reviewDecision": "APPROVED",
    "reviewRequestRecipientSet": [
      "alexfauquette",
    ],
    "reviewers": [
      "alexfauquette",
      "oliviertassinari",
    ],
    "reviews": [
      {
        "author": {
          "login": "oliviertassinari",
        },
        "submittedAt": "2025-05-03T14:46:59Z",
      },
      {
        "author": {
          "login": "oliviertassinari",
        },
        "submittedAt": "2025-05-03T14:50:16Z",
      },
      {
        "author": {
          "login": "oliviertassinari",
        },
        "submittedAt": "2025-05-03T14:51:48Z",
      },
      {
        "author": {
          "login": "alexfauquette",
        },
        "submittedAt": "2025-05-05T08:31:53Z",
      },
    ],
    "state": "MERGED",
    "targetBranch": "master",
    "timelineItems": [
      {
        "createdAt": "2025-05-04T11:15:28Z",
        "requestedReviewer": {
          "login": "alexfauquette",
        },
      },
    ],
    "title": "[docs-infra] Update feedback Node.js to v22",
    "url": "https://github.com/mui/material-ui/pull/46064",
    "user": "oliviertassinari",
  },
  {
    "assignees": [],
    "author": "oliviertassinari",
    "commenters": [
      "mapache-salvaje",
      "mui-bot",
      "oliviertassinari",
    ],
    "comments": [
      {
        "author": {
          "login": "mui-bot",
        },
        "createdAt": "2025-05-05T22:18:50Z",
      },
      {
        "author": {
          "login": "mapache-salvaje",
        },
        "createdAt": "2025-05-07T16:33:24Z",
      },
      {
        "author": {
          "login": "oliviertassinari",
        },
        "createdAt": "2025-05-07T17:07:19Z",
      },
    ],
    "createdAt": "2025-05-06 07:16:02",
    "isDraft": false,
    "labels": [
      "docs",
      "enhancement",
      "scope: docs-infra",
    ],
    "mergeable": "UNKNOWN",
    "merged": true,
    "mergedAt": "2025-05-08 05:47:34",
    "number": 46090,
    "requestedReviewers": null,
    "reviewDecision": "APPROVED",
    "reviewRequestRecipientSet": [
      "mapache-salvaje",
    ],
    "reviewers": [
      "mapache-salvaje",
    ],
    "reviews": [
      {
        "author": {
          "login": "mapache-salvaje",
        },
        "submittedAt": "2025-05-07T17:42:43Z",
      },
    ],
    "state": "MERGED",
    "targetBranch": "master",
    "timelineItems": [
      {
        "createdAt": "2025-05-05T22:26:10Z",
        "requestedReviewer": {
          "login": "mapache-salvaje",
        },
      },
    ],
    "title": "[docs] Remove oudated scaffoldhub ad",
    "url": "https://github.com/mui/material-ui/pull/46090",
    "user": "oliviertassinari",
  },
  {
    "assignees": [],
    "author": "oliviertassinari",
    "commenters": [
      "mui-bot",
    ],
    "comments": [
      {
        "author": {
          "login": "mui-bot",
        },
        "createdAt": "2025-05-12T18:56:21Z",
      },
    ],
    "createdAt": "2025-05-13 03:54:56",
    "isDraft": false,
    "labels": [
      "docs",
    ],
    "mergeable": "UNKNOWN",
    "merged": true,
    "mergedAt": "2025-05-15 16:27:18",
    "number": 46135,
    "requestedReviewers": null,
    "reviewDecision": "APPROVED",
    "reviewRequestRecipientSet": null,
    "reviewers": [
      "0210shivam",
      "ZeeshanTamboli",
    ],
    "reviews": [
      {
        "author": {
          "login": "0210shivam",
        },
        "submittedAt": "2025-05-13T03:43:38Z",
      },
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "submittedAt": "2025-05-15T07:05:42Z",
      },
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "submittedAt": "2025-05-15T07:16:45Z",
      },
      {
        "author": {
          "login": "0210shivam",
        },
        "submittedAt": "2025-05-16T02:54:03Z",
      },
    ],
    "state": "MERGED",
    "targetBranch": "master",
    "timelineItems": [],
    "title": "[docs] Fix GridLegacy docs order",
    "url": "https://github.com/mui/material-ui/pull/46135",
    "user": "oliviertassinari",
  },
]
`;

exports[`filterPRListByLabel > filters pull requests that include provided label keywords (case-insensitive, partial match) 1`] = `
[
  {
    "assignees": [],
    "author": "oliviertassinari",
    "commenters": [
      "mui-bot",
    ],
    "comments": [
      {
        "author": {
          "login": "mui-bot",
        },
        "createdAt": "2025-05-01T00:31:17Z",
      },
    ],
    "createdAt": "2025-05-01 09:27:00",
    "isDraft": false,
    "labels": [
      "MUI X",
      "core",
      "regression 🐛",
    ],
    "mergeable": "UNKNOWN",
    "merged": true,
    "mergedAt": "2025-05-06 08:41:19",
    "number": 46051,
    "requestedReviewers": null,
    "reviewDecision": "APPROVED",
    "reviewRequestRecipientSet": null,
    "reviewers": [
      "Janpot",
      "jedwards1211",
      "oliviertassinari",
    ],
    "reviews": [
      {
        "author": {
          "login": "Janpot",
        },
        "submittedAt": "2025-05-01T08:38:47Z",
      },
      {
        "author": {
          "login": "Janpot",
        },
        "submittedAt": "2025-05-01T08:45:02Z",
      },
      {
        "author": {
          "login": "oliviertassinari",
        },
        "submittedAt": "2025-05-05T23:06:42Z",
      },
      {
        "author": {
          "login": "jedwards1211",
        },
        "submittedAt": "2025-05-06T01:07:34Z",
      },
      {
        "author": {
          "login": "oliviertassinari",
        },
        "submittedAt": "2025-05-06T17:07:38Z",
      },
      {
        "author": {
          "login": "jedwards1211",
        },
        "submittedAt": "2025-05-06T17:43:08Z",
      },
      {
        "author": {
          "login": "oliviertassinari",
        },
        "submittedAt": "2025-05-06T18:51:27Z",
      },
    ],
    "state": "MERGED",
    "targetBranch": "master",
    "timelineItems": [],
    "title": "[core] Fix internal version duplication",
    "url": "https://github.com/mui/material-ui/pull/46051",
    "user": "oliviertassinari",
  },
  {
    "assignees": [],
    "author": "oliviertassinari",
    "commenters": [
      "mui-bot",
    ],
    "comments": [
      {
        "author": {
          "login": "mui-bot",
        },
        "createdAt": "2025-05-02T13:33:29Z",
      },
    ],
    "createdAt": "2025-05-02 22:29:40",
    "isDraft": false,
    "labels": [
      "regression 🐛",
      "website",
    ],
    "mergeable": "UNKNOWN",
    "merged": true,
    "mergedAt": "2025-05-07 00:03:19",
    "number": 46061,
    "requestedReviewers": null,
    "reviewDecision": "APPROVED",
    "reviewRequestRecipientSet": [
      "nadjakovacev",
    ],
    "reviewers": [
      "nadjakovacev",
    ],
    "reviews": [
      {
        "author": {
          "login": "nadjakovacev",
        },
        "submittedAt": "2025-05-06T12:08:29Z",
      },
    ],
    "state": "MERGED",
    "targetBranch": "master",
    "timelineItems": [
      {
        "createdAt": "2025-05-02T22:58:49Z",
        "requestedReviewer": {
          "login": "nadjakovacev",
        },
      },
    ],
    "title": "[website] Update values",
    "url": "https://github.com/mui/material-ui/pull/46061",
    "user": "oliviertassinari",
  },
  {
    "assignees": [],
    "author": "oliviertassinari",
    "commenters": [
      "mui-bot",
    ],
    "comments": [
      {
        "author": {
          "login": "mui-bot",
        },
        "createdAt": "2025-05-03T15:36:55Z",
      },
    ],
    "createdAt": "2025-05-04 00:34:05",
    "isDraft": false,
    "labels": [
      "regression 🐛",
      "website",
    ],
    "mergeable": "UNKNOWN",
    "merged": true,
    "mergedAt": "2025-05-08 02:54:29",
    "number": 46065,
    "requestedReviewers": null,
    "reviewDecision": "APPROVED",
    "reviewRequestRecipientSet": [
      "mapache-salvaje",
    ],
    "reviewers": [
      "mapache-salvaje",
    ],
    "reviews": [
      {
        "author": {
          "login": "mapache-salvaje",
        },
        "submittedAt": "2025-05-07T17:49:25Z",
      },
    ],
    "state": "MERGED",
    "targetBranch": "master",
    "timelineItems": [
      {
        "createdAt": "2025-05-03T15:34:05Z",
        "requestedReviewer": {
          "login": "mapache-salvaje",
        },
      },
    ],
    "title": "[website] Fix CSS alignment",
    "url": "https://github.com/mui/material-ui/pull/46065",
    "user": "oliviertassinari",
  },
]
`;

exports[`filterPRListByParticipation > filters pull requests that have ever been commented or reviewed by the specified user 1`] = `
[
  {
    "assignees": [],
    "author": "aks30498",
    "commenters": [
      "mui-bot",
    ],
    "comments": [
      {
        "author": {
          "login": "mui-bot",
        },
        "createdAt": "2025-05-02T05:26:02Z",
      },
    ],
    "createdAt": "2025-05-02 14:23:37",
    "isDraft": false,
    "labels": [
      "component: autocomplete",
    ],
    "mergeable": "UNKNOWN",
    "merged": false,
    "mergedAt": null,
    "number": 46056,
    "requestedReviewers": null,
    "reviewDecision": "REVIEW_REQUIRED",
    "reviewRequestRecipientSet": [
      "ZeeshanTamboli",
    ],
    "reviewers": [
      "ZeeshanTamboli",
    ],
    "reviews": [
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "submittedAt": "2025-05-02T11:21:42Z",
      },
    ],
    "state": "CLOSED",
    "targetBranch": "master",
    "timelineItems": [
      {
        "createdAt": "2025-05-02T10:32:06Z",
        "requestedReviewer": {
          "login": "ZeeshanTamboli",
        },
      },
    ],
    "title": "feat(Autocomplete): add \`suppressTextareaWarning\` prop to optionally …",
    "url": "https://github.com/mui/material-ui/pull/46056",
    "user": "aks30498",
  },
  {
    "assignees": [],
    "author": "sai6855",
    "commenters": [
      "ZeeshanTamboli",
      "mui-bot",
      "sai6855",
    ],
    "comments": [
      {
        "author": {
          "login": "mui-bot",
        },
        "createdAt": "2025-05-02T07:43:13Z",
      },
      {
        "author": {
          "login": "sai6855",
        },
        "createdAt": "2025-05-16T13:33:47Z",
      },
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "createdAt": "2025-05-16T14:00:45Z",
      },
      {
        "author": {
          "login": "sai6855",
        },
        "createdAt": "2025-05-17T04:55:18Z",
      },
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "createdAt": "2025-05-17T09:41:12Z",
      },
      {
        "author": {
          "login": "sai6855",
        },
        "createdAt": "2025-05-20T10:51:46Z",
      },
      {
        "author": {
          "login": "sai6855",
        },
        "createdAt": "2025-05-21T09:06:37Z",
      },
      {
        "author": {
          "login": "sai6855",
        },
        "createdAt": "2025-05-21T12:32:36Z",
      },
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "createdAt": "2025-05-21T13:07:29Z",
      },
      {
        "author": {
          "login": "sai6855",
        },
        "createdAt": "2025-05-21T17:57:30Z",
      },
    ],
    "createdAt": "2025-05-02 16:40:34",
    "isDraft": false,
    "labels": [
      "component: toggle button",
      "docs",
    ],
    "mergeable": "UNKNOWN",
    "merged": true,
    "mergedAt": "2025-05-22 17:47:43",
    "number": 46058,
    "requestedReviewers": [
      "siriwatknp",
    ],
    "reviewDecision": "APPROVED",
    "reviewRequestRecipientSet": [
      "ZeeshanTamboli",
      "siriwatknp",
    ],
    "reviewers": [
      "ZeeshanTamboli",
      "sai6855",
    ],
    "reviews": [
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "submittedAt": "2025-05-16T12:53:45Z",
      },
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "submittedAt": "2025-05-20T14:04:15Z",
      },
      {
        "author": {
          "login": "sai6855",
        },
        "submittedAt": "2025-05-20T15:30:01Z",
      },
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "submittedAt": "2025-05-21T08:18:44Z",
      },
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "submittedAt": "2025-05-22T08:29:54Z",
      },
    ],
    "state": "MERGED",
    "targetBranch": "master",
    "timelineItems": [
      {
        "createdAt": "2025-05-02T12:04:01Z",
        "requestedReviewer": {
          "login": "siriwatknp",
        },
      },
      {
        "createdAt": "2025-05-15T17:34:50Z",
        "requestedReviewer": {
          "login": "ZeeshanTamboli",
        },
      },
    ],
    "title": "[docs][ToggleButtonGroup] Add spacing demo",
    "url": "https://github.com/mui/material-ui/pull/46058",
    "user": "sai6855",
  },
]
`;

exports[`filterPRListByReviewer > filters pull requests that have ever been reviewed by the specified user 1`] = `
[
  {
    "assignees": [],
    "author": "oliviertassinari",
    "commenters": [
      "mui-bot",
    ],
    "comments": [
      {
        "author": {
          "login": "mui-bot",
        },
        "createdAt": "2025-05-03T14:08:16Z",
      },
    ],
    "createdAt": "2025-05-03 23:05:12",
    "isDraft": false,
    "labels": [
      "enhancement",
      "scope: docs-infra",
    ],
    "mergeable": "UNKNOWN",
    "merged": true,
    "mergedAt": "2025-05-06 02:27:16",
    "number": 46064,
    "requestedReviewers": null,
    "reviewDecision": "APPROVED",
    "reviewRequestRecipientSet": [
      "alexfauquette",
    ],
    "reviewers": [
      "alexfauquette",
      "oliviertassinari",
    ],
    "reviews": [
      {
        "author": {
          "login": "oliviertassinari",
        },
        "submittedAt": "2025-05-03T14:46:59Z",
      },
      {
        "author": {
          "login": "oliviertassinari",
        },
        "submittedAt": "2025-05-03T14:50:16Z",
      },
      {
        "author": {
          "login": "oliviertassinari",
        },
        "submittedAt": "2025-05-03T14:51:48Z",
      },
      {
        "author": {
          "login": "alexfauquette",
        },
        "submittedAt": "2025-05-05T08:31:53Z",
      },
    ],
    "state": "MERGED",
    "targetBranch": "master",
    "timelineItems": [
      {
        "createdAt": "2025-05-04T11:15:28Z",
        "requestedReviewer": {
          "login": "alexfauquette",
        },
      },
    ],
    "title": "[docs-infra] Update feedback Node.js to v22",
    "url": "https://github.com/mui/material-ui/pull/46064",
    "user": "oliviertassinari",
  },
]
`;

exports[`filterPRListByTargetBranch > filters pull requests that are targeting the specified branch 1`] = `
[
  {
    "assignees": [],
    "author": "oliviertassinari",
    "commenters": [
      "mui-bot",
    ],
    "comments": [
      {
        "author": {
          "login": "mui-bot",
        },
        "createdAt": "2024-09-14T13:45:44Z",
      },
    ],
    "createdAt": "2024-09-14T13:43:03Z",
    "isDraft": false,
    "labels": [
      "docs",
      "regression 🐛",
      "v5.x",
    ],
    "mergeable": "UNKNOWN",
    "merged": true,
    "mergedAt": "2024-09-16T11:17:55Z",
    "number": 43753,
    "requestedReviewers": null,
    "reviewDecision": "APPROVED",
    "reviewRequestRecipientSet": [
      "siriwatknp",
    ],
    "reviewers": [
      "siriwatknp",
    ],
    "reviews": [
      {
        "author": {
          "login": "siriwatknp",
        },
        "submittedAt": "2024-09-16T06:41:25Z",
      },
    ],
    "state": "MERGED",
    "targetBranch": "v5.x",
    "timelineItems": [
      {
        "createdAt": "2024-09-14T13:43:03Z",
        "requestedReviewer": {
          "login": "siriwatknp",
        },
      },
    ],
    "title": "[docs] Fix MUI Treasury Layout broken links",
    "url": "https://github.com/mui/material-ui/pull/43753",
    "user": "oliviertassinari",
  },
  {
    "assignees": [],
    "author": "oliviertassinari",
    "commenters": [
      "mui-bot",
      "oliviertassinari",
      "oliviertassinari",
    ],
    "comments": [
      {
        "author": {
          "login": "mui-bot",
        },
        "createdAt": "2024-09-14T14:17:58Z",
      },
      {
        "author": {
          "login": "oliviertassinari",
        },
        "createdAt": "2024-10-02T16:23:48Z",
      },
      {
        "author": {
          "login": "oliviertassinari",
        },
        "createdAt": "2024-10-03T11:39:15Z",
      },
    ],
    "createdAt": "2024-09-14T14:15:20Z",
    "isDraft": false,
    "labels": [
      "bug 🐛",
      "examples",
      "v5.x",
    ],
    "mergeable": "UNKNOWN",
    "merged": true,
    "mergedAt": "2024-10-03T11:40:08Z",
    "number": 43755,
    "requestedReviewers": [
      "alelthomas",
    ],
    "reviewDecision": "APPROVED",
    "reviewRequestRecipientSet": [
      "alelthomas",
    ],
    "reviewers": [
      "mnajdova",
    ],
    "reviews": [
      {
        "author": {
          "login": "mnajdova",
        },
        "submittedAt": "2024-10-03T08:06:59Z",
      },
    ],
    "state": "MERGED",
    "targetBranch": "v5.x",
    "timelineItems": [
      {
        "createdAt": "2024-09-16T11:17:12Z",
        "requestedReviewer": {
          "login": "alelthomas",
        },
      },
    ],
    "title": "[examples] Fix v5 clone example instructions",
    "url": "https://github.com/mui/material-ui/pull/43755",
    "user": "oliviertassinari",
  },
]
`;

exports[`filterPRListNotAuthoredByUser > filters pull requests that are not authored by the specified user 1`] = `
[
  {
    "assignees": [],
    "author": "renovate",
    "commenters": [
      "mui-bot",
    ],
    "comments": [
      {
        "author": {
          "login": "mui-bot",
        },
        "createdAt": "2025-04-30T22:20:17Z",
      },
    ],
    "createdAt": "2025-05-01 07:17:44",
    "isDraft": false,
    "labels": [
      "dependencies",
      "security",
    ],
    "mergeable": "UNKNOWN",
    "merged": true,
    "mergedAt": "2025-06-25 20:44:59",
    "number": 46050,
    "requestedReviewers": null,
    "reviewDecision": "APPROVED",
    "reviewRequestRecipientSet": null,
    "reviewers": [
      "Janpot",
    ],
    "reviews": [
      {
        "author": {
          "login": "Janpot",
        },
        "submittedAt": "2025-06-25T11:44:54Z",
      },
    ],
    "state": "MERGED",
    "targetBranch": "master",
    "timelineItems": [],
    "title": "Bump vite [SECURITY]",
    "url": "https://github.com/mui/material-ui/pull/46050",
    "user": "renovate[bot]",
  },
  {
    "assignees": [],
    "author": "renovate",
    "commenters": [
      "mui-bot",
    ],
    "comments": [
      {
        "author": {
          "login": "mui-bot",
        },
        "createdAt": "2025-05-01T03:23:18Z",
      },
    ],
    "createdAt": "2025-05-01 12:20:43",
    "isDraft": false,
    "labels": [
      "dependencies",
    ],
    "mergeable": "UNKNOWN",
    "merged": false,
    "mergedAt": null,
    "number": 46052,
    "requestedReviewers": null,
    "reviewDecision": "REVIEW_REQUIRED",
    "reviewRequestRecipientSet": null,
    "reviewers": null,
    "reviews": [],
    "state": "CLOSED",
    "targetBranch": "master",
    "timelineItems": [],
    "title": "Lock file maintenance",
    "url": "https://github.com/mui/material-ui/pull/46052",
    "user": "renovate[bot]",
  },
  {
    "assignees": [],
    "author": "Janpot",
    "commenters": [
      "mui-bot",
    ],
    "comments": [
      {
        "author": {
          "login": "mui-bot",
        },
        "createdAt": "2025-05-01T09:39:41Z",
      },
    ],
    "createdAt": "2025-05-01 18:36:59",
    "isDraft": false,
    "labels": [
      "core",
    ],
    "mergeable": "UNKNOWN",
    "merged": true,
    "mergedAt": "2025-05-02 00:11:39",
    "number": 46053,
    "requestedReviewers": null,
    "reviewDecision": "APPROVED",
    "reviewRequestRecipientSet": [
      "siriwatknp",
    ],
    "reviewers": [
      "siriwatknp",
    ],
    "reviews": [
      {
        "author": {
          "login": "siriwatknp",
        },
        "submittedAt": "2025-05-01T14:25:27Z",
      },
    ],
    "state": "MERGED",
    "targetBranch": "master",
    "timelineItems": [
      {
        "createdAt": "2025-05-01T14:19:26Z",
        "requestedReviewer": {
          "login": "siriwatknp",
        },
      },
    ],
    "title": "[core] Avoid the need for \`@mui/material/themeCssVarsAugmentation\`",
    "url": "https://github.com/mui/material-ui/pull/46053",
    "user": "Janpot",
  },
  {
    "assignees": [],
    "author": "Janpot",
    "commenters": [
      "mui-bot",
    ],
    "comments": [
      {
        "author": {
          "login": "mui-bot",
        },
        "createdAt": "2025-05-01T14:31:43Z",
      },
    ],
    "createdAt": "2025-05-01 23:29:12",
    "isDraft": false,
    "labels": [
      "scope: code-infra",
    ],
    "mergeable": "UNKNOWN",
    "merged": true,
    "mergedAt": "2025-05-02 03:58:31",
    "number": 46054,
    "requestedReviewers": null,
    "reviewDecision": "APPROVED",
    "reviewRequestRecipientSet": null,
    "reviewers": [
      "LukasTy",
    ],
    "reviews": [
      {
        "author": {
          "login": "LukasTy",
        },
        "submittedAt": "2025-05-01T18:09:21Z",
      },
    ],
    "state": "MERGED",
    "targetBranch": "master",
    "timelineItems": [
      {
        "createdAt": "2025-05-01T15:12:06Z",
        "requestedReviewer": null,
      },
    ],
    "title": "[code-infra] Correct some manually curated .d.ts files",
    "url": "https://github.com/mui/material-ui/pull/46054",
    "user": "Janpot",
  },
  {
    "assignees": [
      "rita-codes",
    ],
    "author": "rita-codes",
    "commenters": [
      "mui-bot",
    ],
    "comments": [
      {
        "author": {
          "login": "mui-bot",
        },
        "createdAt": "2025-05-02T09:34:50Z",
      },
    ],
    "createdAt": "2025-05-02 04:21:03",
    "isDraft": false,
    "labels": [
      "website",
    ],
    "mergeable": "UNKNOWN",
    "merged": true,
    "mergedAt": "2025-05-02 19:12:22",
    "number": 46055,
    "requestedReviewers": null,
    "reviewDecision": "APPROVED",
    "reviewRequestRecipientSet": [
      "DanailH",
    ],
    "reviewers": [
      "DanailH",
    ],
    "reviews": [
      {
        "author": {
          "login": "DanailH",
        },
        "submittedAt": "2025-05-02T09:17:06Z",
      },
    ],
    "state": "MERGED",
    "targetBranch": "master",
    "timelineItems": [
      {
        "createdAt": "2025-05-01T19:29:31Z",
        "requestedReviewer": {
          "login": "DanailH",
        },
      },
    ],
    "title": "[website] Adds Rita Iglesias to the team members (About page)",
    "url": "https://github.com/mui/material-ui/pull/46055",
    "user": "rita-codes",
  },
  {
    "assignees": [],
    "author": "aks30498",
    "commenters": [
      "mui-bot",
    ],
    "comments": [
      {
        "author": {
          "login": "mui-bot",
        },
        "createdAt": "2025-05-02T05:26:02Z",
      },
    ],
    "createdAt": "2025-05-02 14:23:37",
    "isDraft": false,
    "labels": [
      "component: autocomplete",
    ],
    "mergeable": "UNKNOWN",
    "merged": false,
    "mergedAt": null,
    "number": 46056,
    "requestedReviewers": null,
    "reviewDecision": "REVIEW_REQUIRED",
    "reviewRequestRecipientSet": [
      "ZeeshanTamboli",
    ],
    "reviewers": [
      "ZeeshanTamboli",
    ],
    "reviews": [
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "submittedAt": "2025-05-02T11:21:42Z",
      },
    ],
    "state": "CLOSED",
    "targetBranch": "master",
    "timelineItems": [
      {
        "createdAt": "2025-05-02T10:32:06Z",
        "requestedReviewer": {
          "login": "ZeeshanTamboli",
        },
      },
    ],
    "title": "feat(Autocomplete): add \`suppressTextareaWarning\` prop to optionally …",
    "url": "https://github.com/mui/material-ui/pull/46056",
    "user": "aks30498",
  },
  {
    "assignees": [],
    "author": "sai6855",
    "commenters": [
      "github-actions",
      "mui-bot",
      "sai6855",
    ],
    "comments": [
      {
        "author": {
          "login": "mui-bot",
        },
        "createdAt": "2025-05-02T06:40:41Z",
      },
      {
        "author": {
          "login": "sai6855",
        },
        "createdAt": "2025-05-15T11:02:30Z",
      },
      {
        "author": {
          "login": "github-actions",
        },
        "createdAt": "2025-05-16T03:45:01Z",
      },
    ],
    "createdAt": "2025-05-02 15:37:53",
    "isDraft": false,
    "labels": [
      "component: Grid",
      "docs",
      "needs cherry-pick",
      "package: material-ui",
      "package: system",
      "v6.x",
    ],
    "mergeable": "UNKNOWN",
    "merged": true,
    "mergedAt": "2025-05-16 12:44:51",
    "number": 46057,
    "requestedReviewers": null,
    "reviewDecision": "APPROVED",
    "reviewRequestRecipientSet": [
      "siriwatknp",
    ],
    "reviewers": [
      "siriwatknp",
    ],
    "reviews": [
      {
        "author": {
          "login": "siriwatknp",
        },
        "submittedAt": "2025-05-16T03:44:50Z",
      },
    ],
    "state": "MERGED",
    "targetBranch": "master",
    "timelineItems": [
      {
        "createdAt": "2025-05-02T06:46:46Z",
        "requestedReviewer": {
          "login": "siriwatknp",
        },
      },
    ],
    "title": "[docs][material-ui][Grid] Update grid migration guide",
    "url": "https://github.com/mui/material-ui/pull/46057",
    "user": "sai6855",
  },
  {
    "assignees": [],
    "author": "sai6855",
    "commenters": [
      "ZeeshanTamboli",
      "mui-bot",
      "sai6855",
    ],
    "comments": [
      {
        "author": {
          "login": "mui-bot",
        },
        "createdAt": "2025-05-02T07:43:13Z",
      },
      {
        "author": {
          "login": "sai6855",
        },
        "createdAt": "2025-05-16T13:33:47Z",
      },
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "createdAt": "2025-05-16T14:00:45Z",
      },
      {
        "author": {
          "login": "sai6855",
        },
        "createdAt": "2025-05-17T04:55:18Z",
      },
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "createdAt": "2025-05-17T09:41:12Z",
      },
      {
        "author": {
          "login": "sai6855",
        },
        "createdAt": "2025-05-20T10:51:46Z",
      },
      {
        "author": {
          "login": "sai6855",
        },
        "createdAt": "2025-05-21T09:06:37Z",
      },
      {
        "author": {
          "login": "sai6855",
        },
        "createdAt": "2025-05-21T12:32:36Z",
      },
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "createdAt": "2025-05-21T13:07:29Z",
      },
      {
        "author": {
          "login": "sai6855",
        },
        "createdAt": "2025-05-21T17:57:30Z",
      },
    ],
    "createdAt": "2025-05-02 16:40:34",
    "isDraft": false,
    "labels": [
      "component: toggle button",
      "docs",
    ],
    "mergeable": "UNKNOWN",
    "merged": true,
    "mergedAt": "2025-05-22 17:47:43",
    "number": 46058,
    "requestedReviewers": [
      "siriwatknp",
    ],
    "reviewDecision": "APPROVED",
    "reviewRequestRecipientSet": [
      "ZeeshanTamboli",
      "siriwatknp",
    ],
    "reviewers": [
      "ZeeshanTamboli",
      "sai6855",
    ],
    "reviews": [
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "submittedAt": "2025-05-16T12:53:45Z",
      },
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "submittedAt": "2025-05-20T14:04:15Z",
      },
      {
        "author": {
          "login": "sai6855",
        },
        "submittedAt": "2025-05-20T15:30:01Z",
      },
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "submittedAt": "2025-05-21T08:18:44Z",
      },
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "submittedAt": "2025-05-22T08:29:54Z",
      },
    ],
    "state": "MERGED",
    "targetBranch": "master",
    "timelineItems": [
      {
        "createdAt": "2025-05-02T12:04:01Z",
        "requestedReviewer": {
          "login": "siriwatknp",
        },
      },
      {
        "createdAt": "2025-05-15T17:34:50Z",
        "requestedReviewer": {
          "login": "ZeeshanTamboli",
        },
      },
    ],
    "title": "[docs][ToggleButtonGroup] Add spacing demo",
    "url": "https://github.com/mui/material-ui/pull/46058",
    "user": "sai6855",
  },
  {
    "assignees": [],
    "author": "alexfauquette",
    "commenters": [
      "mui-bot",
    ],
    "comments": [
      {
        "author": {
          "login": "mui-bot",
        },
        "createdAt": "2025-05-02T13:21:15Z",
      },
    ],
    "createdAt": "2025-05-02 21:53:51",
    "isDraft": true,
    "labels": [
      "core",
    ],
    "mergeable": "UNKNOWN",
    "merged": false,
    "mergedAt": null,
    "number": 46060,
    "requestedReviewers": null,
    "reviewDecision": "REVIEW_REQUIRED",
    "reviewRequestRecipientSet": null,
    "reviewers": null,
    "reviews": [],
    "state": "CLOSED",
    "targetBranch": "master",
    "timelineItems": [],
    "title": "[experiment][core] Upgrade MUI X packages to v8 ",
    "url": "https://github.com/mui/material-ui/pull/46060",
    "user": "alexfauquette",
  },
]
`;

exports[`filterPRListSelfInitiatedReviewedByUser > filters pull requests that have been reviewed by the specified user who have not been requested to review 1`] = `
[
  {
    "assignees": [],
    "author": "hiro0218",
    "commenters": [
      "mui-bot",
    ],
    "comments": [
      {
        "author": {
          "login": "mui-bot",
        },
        "createdAt": "2024-09-17T06:45:10Z",
      },
    ],
    "createdAt": "2024-09-14 23:02:44",
    "isDraft": false,
    "labels": [
      "docs",
      "package: pigment-css",
    ],
    "mergeable": "UNKNOWN",
    "merged": true,
    "mergedAt": "2024-09-17 16:27:10",
    "number": 43754,
    "requestedReviewers": [
      "alelthomas",
    ],
    "reviewDecision": "APPROVED",
    "reviewRequestRecipientSet": [
      "alelthomas",
    ],
    "reviewers": [
      "ZeeshanTamboli",
    ],
    "reviews": [
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "submittedAt": "2024-09-17T07:27:04Z",
      },
    ],
    "state": "MERGED",
    "targetBranch": "master",
    "timelineItems": [
      {
        "createdAt": "2024-09-14T14:13:45Z",
        "requestedReviewer": {
          "login": "alelthomas",
        },
      },
    ],
    "title": "[docs][pigment-css] Fix typo globalCSS -> globalCss",
    "url": "https://github.com/mui/material-ui/pull/43754",
    "user": "hiro0218",
  },
]
`;

exports[`filterPendingReviewRequestPRList > filters pull requests that have pending review request by the specified user 1`] = `
[
  {
    "assignees": [],
    "author": "hiro0218",
    "commenters": [
      "mui-bot",
    ],
    "comments": [
      {
        "author": {
          "login": "mui-bot",
        },
        "createdAt": "2024-09-17T06:45:10Z",
      },
    ],
    "createdAt": "2024-09-14 23:02:44",
    "isDraft": false,
    "labels": [
      "docs",
      "package: pigment-css",
    ],
    "mergeable": "UNKNOWN",
    "merged": true,
    "mergedAt": "2024-09-17 16:27:10",
    "number": 43754,
    "requestedReviewers": [
      "alelthomas",
    ],
    "reviewDecision": "APPROVED",
    "reviewRequestRecipientSet": [
      "alelthomas",
    ],
    "reviewers": [
      "ZeeshanTamboli",
    ],
    "reviews": [
      {
        "author": {
          "login": "ZeeshanTamboli",
        },
        "submittedAt": "2024-09-17T07:27:04Z",
      },
    ],
    "state": "MERGED",
    "targetBranch": "master",
    "timelineItems": [
      {
        "createdAt": "2024-09-14T14:13:45Z",
        "requestedReviewer": {
          "login": "alelthomas",
        },
      },
    ],
    "title": "[docs][pigment-css] Fix typo globalCSS -> globalCss",
    "url": "https://github.com/mui/material-ui/pull/43754",
    "user": "hiro0218",
  },
  {
    "assignees": [],
    "author": "oliviertassinari",
    "commenters": [
      "mui-bot",
      "oliviertassinari",
    ],
    "comments": [
      {
        "author": {
          "login": "mui-bot",
        },
        "createdAt": "2024-09-14T14:17:58Z",
      },
      {
        "author": {
          "login": "oliviertassinari",
        },
        "createdAt": "2024-10-02T16:23:48Z",
      },
      {
        "author": {
          "login": "oliviertassinari",
        },
        "createdAt": "2024-10-03T11:39:15Z",
      },
    ],
    "createdAt": "2024-09-14 23:15:20",
    "isDraft": false,
    "labels": [
      "bug 🐛",
      "examples",
      "v5.x",
    ],
    "mergeable": "UNKNOWN",
    "merged": true,
    "mergedAt": "2024-10-03 20:40:08",
    "number": 43755,
    "requestedReviewers": [
      "alelthomas",
    ],
    "reviewDecision": "APPROVED",
    "reviewRequestRecipientSet": [
      "alelthomas",
    ],
    "reviewers": [
      "mnajdova",
    ],
    "reviews": [
      {
        "author": {
          "login": "mnajdova",
        },
        "submittedAt": "2024-10-03T08:06:59Z",
      },
    ],
    "state": "MERGED",
    "targetBranch": "v5.x",
    "timelineItems": [
      {
        "createdAt": "2024-09-16T11:17:12Z",
        "requestedReviewer": {
          "login": "alelthomas",
        },
      },
    ],
    "title": "[examples] Fix v5 clone example instructions",
    "url": "https://github.com/mui/material-ui/pull/43755",
    "user": "oliviertassinari",
  },
]
`;
